k8s-prod-02/vaultwarden/vaultwarden.statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vaultwarden
  namespace: vaultwarden
  labels:
    app.kubernetes.io/name: vaultwarden
spec:
  replicas: 1
  serviceName: vaultwarden
  selector:
    matchLabels:
      app.kubernetes.io/name: vaultwarden
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vaultwarden
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
      containers:
      - name: vaultwarden
        image: vaultwarden/server:1.30.5
        ports:
        - containerPort: 8080
          name: web
          protocol: TCP
        resources:
          requests:
            memory: 300Mi
            cpu: 300m
          limits:
            memory: 600Mi
            cpu: 600m
        volumeMounts:
        - name: vaultwarden-data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: vaultwarden-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "hcloud-volumes"
      resources:
        requests:
          storage: 10Gi
