k8s-prod-02/vaultwarden/vaultwarden.svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: vaultwarden
  name: vaultwarden
  namespace: vaultwarden
spec:
  selector:
    app.kubernetes.io/name: vaultwarden
  ports:
    - name: web
      port: 80
      targetPort: 8080
